<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="Head and neck"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/whiteLightGray"
        android:fontFamily="serif"
        android:padding="5dp"
        android:text="@string/area"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_area"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        android:hapticFeedbackEnabled="true"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/whiteLightGray"
        android:fontFamily="serif"
        android:padding="5dp"
        android:text="@string/redness"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_redness"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:hapticFeedbackEnabled="true"
        android:padding="5dp"
        android:textAlignment="center"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/whiteLightGray"
        android:fontFamily="serif"
        android:padding="5dp"
        android:text="@string/thickness"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_thickness"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:hapticFeedbackEnabled="true"
        android:padding="5dp"
        android:textAlignment="center"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/whiteLightGray"
        android:fontFamily="serif"
        android:padding="5dp"
        android:text="@string/scale"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_scale"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:hapticFeedbackEnabled="true"
        android:padding="5dp"
        android:textAlignment="center"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/bodyImageView"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginTop="0dp"
        android:padding="5dp" />

</LinearLayout>