<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="10dp">

        <TextView
            android:id="@+id/headerTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_700"
            android:fontFamily="serif"
            android:padding="5dp"
            android:text="@string/head_and_neck"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/area"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/resultAreaTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTitleTV" />

        <TextView
            android:id="@+id/resultAreaTV"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:padding="10dp"
            android:text="0"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/resultRednessTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTitleTV" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/redness"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/resultRednessTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/resultRednessTV"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:padding="10dp"
            android:text="0"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/resultThicknessTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultAreaTV" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/thickness"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/resultThicknessTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/resultThicknessTV"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:padding="10dp"
            android:text="0"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/resultScaleTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultRednessTV" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/scale"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/resultScaleTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/resultScaleTV"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_200"
            android:padding="10dp"
            android:text="0"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultThicknessTV" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_700"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/total"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/totalTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/totalTV"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/teal_700"
            android:padding="10dp"
            android:text="0"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultScaleTV" />

        <ImageView
            android:id="@+id/pasiImageView"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/img" />


</androidx.constraintlayout.widget.ConstraintLayout>